[package]
name = "Hello-LibAFL"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = "1.6.1"
hex = "0.4.3"
libafl = "0.15"
libafl_bolts = "0.15"
revm = "34.0.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
debug = true

[features]
panic = []

[[example]]
name = "baby_fuzzer_custom_executor"
path = "examples/baby/baby_fuzzer_custom_executor.rs"

[[example]]
name = "baby_fuzzer_minimizing"
path = "examples/baby/baby_fuzzer_minimizing.rs"

